--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -16,6 +16,11 @@
         <link href="css/styles.css" rel="stylesheet" />
         <link rel="stylesheet" href="css/dark-mode.css">
         <script src="js/dark-mode-switch.js"></script>
+
+
+
+        
+
     
     </head>
     <body id="page-top">
@@ -24,7 +29,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Shadab Shaikh</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/shadab-01.jpg" alt="..." /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/Orange-Shadab.png" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
